erDiagram
    NUTRITIONIST {
        int id PK
        string fullName
        string email UK
        string password
        string crn
        datetime createdAt
        datetime updatedAt
    }
    
    PATIENT {
        int id PK
        string fullName
        string email
        string phone
        date birthDate
        string gender
        string goal
        text allergies
        text notes
        int nutritionistId FK
        datetime createdAt
        datetime updatedAt
    }
    
    APPOINTMENT {
        int id PK
        datetime dateTime
        string status
        text notes
        int patientId FK
        int nutritionistId FK
        datetime createdAt
        datetime updatedAt
    }
    
    MEASUREMENT {
        int id PK
        float weight
        float height
        float bodyFat
        float muscleMass
        float bmi
        date date
        text notes
        int patientId FK
        datetime createdAt
        datetime updatedAt
    }
    
    PLAN {
        int id PK
        string name
        text description
        int totalCalories
        boolean isActive
        boolean aiGenerated
        int patientId FK
        datetime createdAt
        datetime updatedAt
    }
    
    MEAL {
        int id PK
        string time
        string title
        json items
        int calories
        int planId FK
        datetime createdAt
        datetime updatedAt
    }
    
    MACROS {
        int id PK
        int protein
        int carbs
        int fats
        int mealId FK
        datetime createdAt
        datetime updatedAt
    }
    
    %% Relacionamentos
    NUTRITIONIST ||--o{ PATIENT : "1:N"
    NUTRITIONIST ||--o{ APPOINTMENT : "1:N"
    PATIENT ||--o{ APPOINTMENT : "1:N"
    PATIENT ||--o{ MEASUREMENT : "1:N"
    PATIENT ||--o{ PLAN : "1:N"
    PLAN ||--o{ MEAL : "1:N"
    MEAL ||--|| MACROS : "1:1"
    
    %% Índices e Constraints
    PATIENT ||--|| NUTRITIONIST : "email unique per nutritionist"
    PLAN ||--|| PATIENT : "only one active plan per patient"
